# bookkeeping-app

./: .gitignore  CLAUDE.md  README.md  electron.vite.config.ts  package-lock.json  package.json  vite.config.ts
.claude/: settings.json  settings.local.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs
src/renderer/: App.css  App.tsx  env.d.ts  index.html  main.tsx
src/renderer/components/: AddExpense.tsx  CategoryManage.tsx  ExpenseList.tsx  Layout.tsx  MonthlyReport.tsx  Settings.tsx  SnakeGame.tsx
src/renderer/data/: categories.ts
src/renderer/database/: index.ts
src/renderer/public/: manifest.json  sw.js
